--- a/js/jdbc/tsconfig.json
+++ b/js/jdbc/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "references": [
     {
+      "path": "maven"
+    },
+    {
       "path": "jdbc-driver"
     },
     {
