--- a/packages/cubejs-sqlite-driver/package.json
+++ b/packages/cubejs-sqlite-driver/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@cubejs-backend/query-orchestrator": "^0.27.5",
+    "moment-timezone": "^0.5.33",
     "sqlite3": "^5.0.2"
   },
   "license": "Apache-2.0",
