--- a/packages/cubejs-snowflake-driver/package.json
+++ b/packages/cubejs-snowflake-driver/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@cubejs-backend/query-orchestrator": "^0.27.5",
     "date-fns-timezone": "^0.1.4",
-    "snowflake-sdk": "^1.1.15"
+    "snowflake-sdk": "1.6.1",
+    "yarn": "^1.22.10"
   },
   "license": "Apache-2.0",
   "publishConfig": {
