--- a/packages/cubejs-api-gateway/package.json
+++ b/packages/cubejs-api-gateway/package.json
@@ -31,6 +31,7 @@
     "@hapi/joi": "^15.1.1",
     "body-parser": "^1.19.0",
     "chrono-node": "^2.2.6",
+    "compression": "^1.7.4",
     "cron-parser": "^2.16.3",
     "jsonwebtoken": "^8.3.0",
     "jwk-to-pem": "^2.0.4",
