--- a/packages/cubejs-client-vue3/package.json
+++ b/packages/cubejs-client-vue3/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@cubejs-client/vue",
+  "name": "@cubejs-client/vue3",
   "version": "0.27.19",
   "engines": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/cube-js/cube.js.git",
-    "directory": "packages/cubejs-client-vue"
+    "directory": "packages/cubejs-client-vue3"
   },
-  "description": "Vue.js components for cube.js",
+  "description": "Vue.js 3 components for cube.js",
   "author": "Ricardo Tapia",
   "contributors": ["Ricardo Tapia", "Cube Dev, Inc."],
   "scripts": {
