--- a/packages/cubejs-client-vue3/package.json
+++ b/packages/cubejs-client-vue3/package.json
@@ -25,23 +25,26 @@
     "src"
   ],
   "dependencies": {
-    "@cubejs-client/core": "^0.27.19",
+    "@cubejs-client/core": "^0.27.14",
+    "@vue/compiler-sfc": "^3.0.11",
     "core-js": "^3.6.5",
-    "ramda": "^0.27.0"
+    "flush-promises": "^1.0.2",
+    "ramda": "^0.27.0",
+    "vue-loader": "^16.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-service": "^4.2.3",
-    "@vue/test-utils": "1.1.3",
+    "@vue/test-utils": "^2.0.0-0",
+    "vue-jest": "^5.0.0-0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^23.6.0",
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^6.2.1",
-    "vue": "^2.6.6",
-    "vue-template-compiler": "^2.5.21"
+    "vue": "^3.0.11"
   },
   "eslintConfig": {
     "root": true,
