--- a/packages/cubejs-client-vue/package.json
+++ b/packages/cubejs-client-vue/package.json
@@ -34,14 +34,17 @@
     "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-service": "^4.2.3",
-    "@vue/test-utils": "1.1.3",
+    "@vue/test-utils": "^1.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^23.6.0",
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^6.2.1",
     "vue": "^2.6.6",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.6.12"
+  },
+  "peerDependencies" : {
+    "vue": "^2.6.6"
   },
   "eslintConfig": {
     "root": true,
