--- a/docs/package.json
+++ b/docs/package.json
@@ -24,26 +24,6 @@
     "classnames": "^2.2.6",
     "cubedev-tracking": "^1.0.4",
     "dotenv": "^7.0.0",
-    "gatsby": "^3",
-    "gatsby-image": "^3",
-    "gatsby-link": "^3",
-    "gatsby-plugin-antd": "^2.0.2",
-    "gatsby-plugin-catch-links": "^3",
-    "gatsby-plugin-google-analytics": "^3",
-    "gatsby-plugin-layout": "^1.0.14",
-    "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-react-helmet": "^4",
-    "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-s3": "^0.2.5",
-    "gatsby-plugin-sass": "^4",
-    "gatsby-plugin-sharp": "^3",
-    "gatsby-plugin-sitemap": "^4",
-    "gatsby-redirect-from": "^0.2.4",
-    "gatsby-remark-copy-linked-files": "^3",
-    "gatsby-remark-custom-blocks": "^3",
-    "gatsby-remark-images": "^5",
-    "gatsby-source-filesystem": "^3",
-    "gatsby-transformer-remark": "^3",
     "loader-utils": "^1.2.3",
     "lockr": "^0.8.5",
     "lodash": "^4.17.20",
@@ -51,8 +31,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-html-parser": "^2.0.2",
-    "react-scroll": "^1.7.11",
-    "remark-custom-blocks": "^2.5.0"
+    "react-scroll": "^1.7.11"
   },
   "devDependencies": {
     "@percy/agent": "^0.28.5",
@@ -65,13 +44,34 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-html-parser": "^2.0.1",
     "@types/react-scroll": "^1.8.2",
+    "gatsby": "^3",
+    "gatsby-image": "^3",
+    "gatsby-link": "^3",
+    "gatsby-plugin-antd": "^2.0.2",
+    "gatsby-plugin-catch-links": "^3",
+    "gatsby-plugin-google-analytics": "^3",
+    "gatsby-plugin-layout": "^1.0.14",
     "gatsby-plugin-manifest": "^3.6.0",
-    "gatsby-plugin-percy": "^0.1.4",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
+    "gatsby-plugin-react-helmet": "^4",
+    "gatsby-plugin-root-import": "^2.0.5",
+    "gatsby-plugin-s3": "^0.2.5",
+    "gatsby-plugin-sass": "^4",
+    "gatsby-plugin-sharp": "^3",
+    "gatsby-plugin-sitemap": "^4",
+    "gatsby-redirect-from": "^0.2.4",
+    "gatsby-remark-copy-linked-files": "^3",
+    "gatsby-remark-custom-blocks": "^3",
     "gatsby-remark-find-replace": "^0.3.0",
     "gatsby-remark-mathjax-ssr": "^1",
+    "gatsby-remark-images": "^5",
+    "gatsby-source-filesystem": "^3",
+    "gatsby-transformer-remark": "^3",
+    "gatsby-plugin-percy": "^0.1.4",
     "lint-staged": "^10.5.2",
     "markdownlint-cli2": "^0.0.11",
     "prettier": "^2.1.2",
+    "remark-custom-blocks": "^2.5.0",
     "textlint": "^11.7.6",
     "textlint-rule-alex": "^3.0.0",
     "textlint-rule-diacritics": "^1.0.0",
