--- a/packages/cubejs-mysql-driver/package.json
+++ b/packages/cubejs-mysql-driver/package.json
@@ -9,7 +9,7 @@
     "directory": "packages/cubejs-mysql-driver"
   },
   "engines": {
-    "node": ">=10.8.0"
+    "node": ">=12.x"
   },
   "main": "driver/MySqlDriver.js",
   "typings": "driver/index.d.ts",
