docs: replace `gatsby-plugin-favicon` with `gatsby-plugin-manifest`

--- a/docs/package.json
+++ b/docs/package.json
@@ -29,7 +29,6 @@
     "gatsby-link": "^2.0.16",
     "gatsby-plugin-antd": "^2.0.2",
     "gatsby-plugin-catch-links": "^3",
-    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-analytics": "^3",
     "gatsby-plugin-layout": "^1.0.14",
     "gatsby-plugin-meta-redirect": "^1.1.1",
@@ -68,6 +67,7 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-html-parser": "^2.0.1",
     "@types/react-scroll": "^1.8.2",
+    "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-percy": "^0.1.4",
     "gatsby-remark-find-replace": "^0.3.0",
     "gatsby-remark-mathjax-ssr": "^1",
