--- a/packages/cubejs-api-gateway/package.json
+++ b/packages/cubejs-api-gateway/package.json
@@ -49,6 +49,7 @@
     "@types/node-fetch": "^2.5.8",
     "@types/ramda": "^0.27.32",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.1",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "should": "^13.2.3",
