--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -8,9 +8,12 @@
     "url": "https://github.com/cube-js/cube.js.git",
     "directory": "packages/cubejs-playground"
   },
-  "module": "lib/cubejs-playground.esm.js",
+  "module": "lib/index.js",
   "types": "lib/playground/index.d.ts",
   "scripts": {
+    "b": "webpack",
+    "w": "webpack watch",
+    "r": "rollup -c",
     "start": "SKIP_PREFLIGHT_CHECK=true PORT=3080 react-app-rewired start",
     "watch": "rollup -c -w",
     "build": "yarn run build:playground && rollup -c",
@@ -32,8 +35,6 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
-    "@cubejs-client/core": "^0.28.6",
-    "@cubejs-client/react": "^0.28.6",
     "camel-case": "^4.1.2",
     "codesandbox-import-utils": "^2.1.1",
     "customize-cra": "^1.0.0",
@@ -67,6 +68,7 @@
     "@ant-design/compatible": "^1.0.2",
     "@babel/cli": "^7.5.5",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@rollup/plugin-typescript": "^8.2.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
@@ -77,19 +79,30 @@
     "@types/styled-components": "5.1.9",
     "@types/uuid": "^8.3.1",
     "antd": "4.13.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.0",
     "fs-extra": "^8.1.0",
-    "less-loader": "^5.0.0",
+    "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "react": "^17.0.1",
     "react-app-rewire-yarn-workspaces": "^1.0.3",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^17.0.1",
     "recursive-readdir": "^2.2.2",
+    "rollup": "^2.53.3",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "styled-components": "5.2.0",
-    "terser-webpack-plugin": "^4.1.0"
+    "svg-url-loader": "^7.1.1",
+    "terser-webpack-plugin": "^4.1.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2"
   },
   "peerDependencies": {
     "antd": ">=4.13.0",
