--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -16,7 +16,8 @@
     "r": "rollup -c",
     "start": "SKIP_PREFLIGHT_CHECK=true PORT=3080 react-app-rewired start",
     "watch": "rollup -c -w",
-    "build": "yarn run build:playground && rollup -c",
+    "build": "yarn run build:playground && yarn run build:library",
+    "build:library": "rollup -c",
     "build:playground": "SKIP_PREFLIGHT_CHECK=true react-app-rewired --max-old-space-size=3072 build && rm -Rf ../cubejs-server-core/playground/** && cp -R build/ ../cubejs-server-core/playground/"
   },
   "browserslist": [
