--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -11,9 +11,6 @@
   "module": "lib/index.js",
   "types": "lib/playground/index.d.ts",
   "scripts": {
-    "b": "webpack",
-    "w": "webpack watch",
-    "r": "rollup -c",
     "start": "SKIP_PREFLIGHT_CHECK=true PORT=3080 react-app-rewired start",
     "watch": "rollup -c -w",
     "build": "yarn run build:playground && yarn run build:library",
@@ -88,7 +85,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.0",
     "fs-extra": "^8.1.0",
-    "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.1.0",
     "react": "^17.0.1",
     "react-app-rewire-yarn-workspaces": "^1.0.3",
@@ -100,12 +96,8 @@
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "styled-components": "5.2.0",
-    "svg-url-loader": "^7.1.1",
-    "terser-webpack-plugin": "^4.1.0",
     "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2"
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "antd": ">=4.13.0",
