--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -79,12 +79,11 @@
     "@types/styled-components": "5.1.9",
     "@types/uuid": "^8.3.1",
     "antd": "4.13.0",
-    "babel-loader": "^8.2.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.0",
     "fs-extra": "^8.1.0",
-    "mini-css-extract-plugin": "^1.6.2",
+    "less-loader": "^10.0.1",
     "react": "^17.0.1",
     "react-app-rewire-yarn-workspaces": "^1.0.3",
     "react-app-rewired": "^2.1.0",
@@ -95,9 +94,7 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svg": "^2.0.0",
     "styled-components": "5.2.0",
-    "terser-webpack-plugin": "^5.1.4",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "terser-webpack-plugin": "^4.1.0"
   },
   "peerDependencies": {
     "antd": ">=4.13.0",
