--- a/packages/cubejs-playground/tsconfig.json
+++ b/packages/cubejs-playground/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "declaration": true,
     "declarationDir": "lib",
-    "noEmitOnError": true,
+    "noEmitOnError": false,
     "sourceMap": true,
     "allowJs": true,
     "checkJs": true,
