--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "core-js": "^3.6.5",
     "ramda": "^0.27.0",
     "rollup-plugin-dts": "^1.1.8",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "lerna": "^3.13.1"
   },
   "files": [
     "src",
