--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ramda": "^0.27.0",
     "rollup-plugin-dts": "^1.1.8",
     "whatwg-fetch": "^3.0.0",
-    "lerna": "^3.13.1"
+    "lerna": "^3.13.1",
+    "patch-package": "^6.4.7"
   },
   "files": [
     "src",
