edit regex replace

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -354,12 +354,11 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            const repo = await github.repos.get(context.repo)
-            const dataJSON = JSON.stringify(repo.data)
+            const { data } = await github.repos.get(context.repo)
             const reg = new RegExp('📊 ', 'ug');
-            const replacedDataJSON = dataJSON.replace(reg, "")
-            const data = JSON.parse(replacedDataJSON)
-            console.log(data.description)
+            data.description = data.description.replace(reg, "")
+            console.log(data)
+            return data
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
