--- a/packages/cubejs-testing/birdbox-fixtures/postgresql-cubestore.yml
+++ b/packages/cubejs-testing/birdbox-fixtures/postgresql-cubestore.yml
@@ -49,7 +49,8 @@ services:
   cubestore:
     container_name: birdbox-cubestore
     image: cubejs/cubestore:${BIRDBOX_CUBESTORE_VERSION:-latest}
-    environment:
-      # Workaround for Error during processing MySQL connection: peer terminated connection
-      # Because testcontainers know about exposed 3306 from Dockerfile & EXPOSE
-      CUBESTORE_PORT: "13306"
+# Possible workaround for next version of testcontainers
+#    environment:
+#      # Workaround for Error during processing MySQL connection: peer terminated connection
+#      # Because testcontainers know about exposed 3306 from Dockerfile & EXPOSE
+#      CUBESTORE_PORT: "13306"
