--- a/recipes/column-based-multi-tenancy/docker-compose.yml
+++ b/recipes/column-based-multi-tenancy/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     volumes:
       - .:/cube/conf
 
-  # curl:
-  #   image: cfmanteiga/alpine-bash-curl-jq
-  #   depends_on:
-  #     - cube
-  #   volumes:
-  #     - .:/curl
-  #   entrypoint: ["sh", "curl/init.sh"]
+  curl:
+    image: cfmanteiga/alpine-bash-curl-jq
+    depends_on:
+      - cube
+    volumes:
+      - .:/curl
+    entrypoint: ["sh", "curl/query.sh"]
