--- a/examples/recipes/mandatory-filters/docker-compose.yml
+++ b/examples/recipes/mandatory-filters/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     volumes:
       - .:/cube/conf
 
-  # curl:
+  # query:
   #   image: cfmanteiga/alpine-bash-curl-jq
   #   depends_on:
   #     - cube
   #   volumes:
-  #     - .:/curl
-  #   entrypoint: ["sh", "curl/init.sh"]
+  #     - .:/query
+  #   entrypoint: ["sh", "query/queries/run.sh"]
