--- a/examples/recipes/referencing-dynamic-measures/docker-compose.yml
+++ b/examples/recipes/referencing-dynamic-measures/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     volumes:
       - .:/cube/conf
 
-  # query:
-  #   image: cfmanteiga/alpine-bash-curl-jq
-  #   depends_on:
-  #     - cube
-  #   volumes:
-  #     - .:/query
-  #   entrypoint: ["sh", "query/queries/run.sh"]
+  query:
+    image: cfmanteiga/alpine-bash-curl-jq
+    depends_on:
+      - cube
+    volumes:
+      - .:/query
+    entrypoint: ["sh", "query/queries/run.sh"]
