--- a/examples/recipes/multiple-data-sources/docker-compose.yml
+++ b/examples/recipes/multiple-data-sources/docker-compose.yml
@@ -10,19 +10,17 @@ services:
     volumes:
       - .:/cube/conf
 
-  mysql:
-    platform: linux/x86_64
-    image: mysql
-    ports:
-      - 3306:3306
-    command: --default-authentication-plugin=mysql_native_password
+  postgres:
+    image: postgres
     restart: always
+    ports:
+      - 5432:5432
     environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: ecom-mysql
+      POSTGRES_PASSWORD: example
+      POSTGRES_DB: ecom-tenant1
     volumes:
       - ./scripts:/docker-entrypoint-initdb.d
-      - ./datadir:/var/lib/mysql
+
 
   # query:
   #   image: cfmanteiga/alpine-bash-curl-jq
