--- a/examples/recipes/multiple-data-sources/docker-compose.yml
+++ b/examples/recipes/multiple-data-sources/docker-compose.yml
@@ -17,15 +17,14 @@ services:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: example
-      POSTGRES_DB: ecom-tenant1
+      POSTGRES_DB: cubeDev
     volumes:
       - ./scripts:/docker-entrypoint-initdb.d
 
-
-  # query:
-  #   image: cfmanteiga/alpine-bash-curl-jq
-  #   depends_on:
-  #     - cube
-  #   volumes:
-  #     - .:/query
-  #   entrypoint: ["sh", "query/queries/run.sh"]
+  query:
+    image: cfmanteiga/alpine-bash-curl-jq
+    depends_on:
+      - cube
+    volumes:
+      - .:/query
+    entrypoint: ["sh", "query/queries/run.sh"]
