Added values for cubestack

--- a/examples/helm-charts/cubestack/values.yaml
+++ b/examples/helm-charts/cubestack/values.yaml
@@ -66,6 +66,10 @@ cubejs:
     ##
     logLevel: "warn"
 
+    ## If true, uses Cube Store for Pre-aggregation storage and caching
+    ##
+    externalDefault: true
+
     ## If true, then send telemetry to CubeJS
     ##
     telemetry: false
@@ -774,10 +778,33 @@ redis:
 
   global:
     redis:
-      password: ""
+      password:
+
+  auth:
+    ## @param auth.enabled Enable password authentication
+    ##
+    enabled: false
+    ## @param auth.sentinel Enable password authentication on sentinels too
+    ##
+    sentinel: true
+    ## @param auth.password Redis&trade; password
+    ## Defaults to a random 10-character alphanumeric string if not set
+    ##
+    password: ""
+    ## @param auth.existingSecret The name of an existing secret with Redis&trade; credentials
+    ## NOTE: When it's set, the previous `auth.password` parameter is ignored
+    ##
+    existingSecret: ""
+    ## @param auth.existingSecretPasswordKey Password key to be retrieved from existing secret
+    ## NOTE: ignored unless `auth.existingSecret` parameter is set
+    ##
+    existingSecretPasswordKey: ""
+    ## @param auth.usePasswordFiles Mount credentials as files instead of using an environment variable
+    ##
+    usePasswordFiles: false
 
   master:
     persistence:
       enabled: false
     service:
-      type: LoadBalancer
+      type: ClusterIP
