Complete the text and example

--- a/examples/recipes/entity-attribute-value/docker-compose.yml
+++ b/examples/recipes/entity-attribute-value/docker-compose.yml
@@ -2,7 +2,9 @@ version: '2.2'
 
 services:
   cube:
-    image: cubejs/cube:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 4000:4000
       - 3000:3000
