--- a/examples/helm-charts/cube-stack/values.yaml
+++ b/examples/helm-charts/cube-stack/values.yaml
@@ -1,8 +1,18 @@
+# Global Vars
+global:
+  cubejs:
+    enabled: true
+  cubestore:
+    enabled: true
+  redis:
+    enabled: true
+
+# Subchart Vars
 cubejs:
-  enabled: true
+  # ...
 
 cubestore:
-  enabled: true
+  # ...
 
 redis:
-  enabled: true
+  # ...
