--- a/examples/helm-charts/cubejs/values.yaml
+++ b/examples/helm-charts/cubejs/values.yaml
@@ -28,7 +28,7 @@ image:
   ##
   pullPolicy: IfNotPresent
 
-global:
+config:
   ## The port for a Cube.js deployment to listen to API connections on
   ##
   apiPort: 4000
@@ -55,7 +55,6 @@ global:
 
   ## The secret key used to sign and verify JWTs. Generated on project scaffold
   ##
-  apiSecret:
   # apiSecretFromSecret:
   #   name:
   #   key:
