--- a/examples/helm-charts/cubejs/values.yaml
+++ b/examples/helm-charts/cubejs/values.yaml
@@ -55,6 +55,7 @@ config:
 
   ## The secret key used to sign and verify JWTs. Generated on project scaffold
   ##
+  apiSecret:
   # apiSecretFromSecret:
   #   name:
   #   key:
