Remove hardcoded db creds

--- a/examples/kubernetes/prod/cube-refresh-worker-deployment.yaml
+++ b/examples/kubernetes/prod/cube-refresh-worker-deployment.yaml
@@ -19,21 +19,19 @@ spec:
       containers:
         - env: # Refer to https://cube.dev/docs/reference/environment-variables for more options
             - name: CUBEJS_API_SECRET
-              value: secret
+              value: <API_SECRET>
             - name: CUBEJS_CUBESTORE_HOST
               value: "cubestore-router"
-            - name: CUBEJS_CUBESTORE_PORT
-              value: "3030"
-            - name: CUBEJS_DB_HOST
-              value: demo-db.cube.dev
+              - name: CUBEJS_DB_HOST
+              value: <DB_HOST>
             - name: CUBEJS_DB_NAME
-              value: ecom
+              value: <DB_NAME>
             - name: CUBEJS_DB_USER
-              value: cube
+              value: <DB_USER>
             - name: CUBEJS_DB_PASS
-              value: "12345"
+              value: <DB_PASSWORD>
             - name: CUBEJS_DB_TYPE
-              value: postgres
+              value: <DB_TYPE>
             - name: CUBEJS_DEV_MODE
               value: "false" # NEVER RUN DEV MODE IN K8S
             - name: CUBEJS_EXTERNAL_DEFAULT
