--- a/docs/netlify.toml
+++ b/docs/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public/"
-command = "source .env.production && ./build-netlify.sh"
+command = "source .env.development && ./build-netlify.sh"
 ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
 
 # we need to wrap the public files to the docs folder on prod deployment so we use a different script for this
