--- a/docs/netlify.toml
+++ b/docs/netlify.toml
@@ -1,10 +1,15 @@
 [build]
-publish = "public/"
-command = "source .env.development && ./build-netlify.sh"
-ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
+  publish = "public/"
+  command = "source .env.development && ./build-netlify.sh"
+  ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
 
 # we need to wrap the public files to the docs folder on prod deployment so we use a different script for this
 [context.production]
   publish = "dist/"
   command = "source .env.production && ./build-netlify-prod.sh"
+  ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
+
+[context.deploy-preview]
+  publish = "public/"
+  command = "source .env.development && ./build-netlify.sh"
   ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
