--- a/docs/.env.development
+++ b/docs/.env.development
@@ -1,2 +1,4 @@
 ALGOLIA_API_KEY='665bbb3a2c36759517a8b75ddba8601f'
 ALGOLIA_INDEX_NAME='cubejs'
+GATSBY_ENV=production
+DEPLOY_PREVIEW_NETLIFY='true'
