--- a/docs/netlify.toml
+++ b/docs/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  publish = "public/"
-  command = "source .env.development && ./build-netlify.sh"
-  ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
+publish = "public/"
+command = "source .env.production && ./build-netlify.sh"
+ignore = "cd .. && git diff --quiet HEAD^ HEAD -- docs/"
 
 # we need to wrap the public files to the docs folder on prod deployment so we use a different script for this
 [context.production]
