--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -428,15 +428,6 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: network=host
-      - name: Build image
-        uses: docker/build-push-action@v2
-        timeout-minutes: 30
-        with:
-          context: .
-          file: ./packages/cubejs-docker/${{ matrix.dockerfile }}
-          platforms: linux/amd64
-          push: true
-          tags: localhost:5000/cubejs/cube:${{ matrix.tag }}
       - name: Use Node.js 15.x
         uses: actions/setup-node@v1
         with:
@@ -463,6 +454,17 @@ jobs:
         run: yarn build
       - name: Lerna tsc
         run: yarn tsc
+      - name: Build playground
+        run: cd packages/cubejs-playground && yarn build
+      - name: Build image
+        uses: docker/build-push-action@v2
+        timeout-minutes: 30
+        with:
+          context: .
+          file: ./packages/cubejs-docker/${{ matrix.dockerfile }}
+          platforms: linux/amd64
+          push: true
+          tags: localhost:5000/cubejs/cube:${{ matrix.tag }}
       - name: Testing Docker image via BirdBox
         run: |
           cd packages/cubejs-testing/
@@ -471,6 +473,7 @@ jobs:
           export DEBUG=testcontainers
           yarn run dataset:minimal
           yarn run birdbox:postgresql
+          yarn run birdbox:postgresql-pre-aggregations
       - name: Testing Docker image via Cypress (Chrome)
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
