--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,5 @@
 **
 !package.json
-!tsconfig.json
 !tsconfig.base.json
 !rollup.config.js
 !yarn.lock
@@ -11,10 +10,11 @@
 !rust/package.json
 !rust/yarn.lock
 !rust/bin
-!rust/dist
 
 packages/*/node_modules/
+packages/*/dist/
 packages/*/coverage/
+packages/cubejs-server-core/playground/
 packages/cubejs-jdbc-driver
 packages/cubejs-serverless
 packages/cubejs-serverless-aws
