--- a/examples/recipes/joining-multiple-datasources-data/docker-compose.yml
+++ b/examples/recipes/joining-multiple-datasources-data/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '2.2'
 
 services:
+  cubestore:
+    image: cubejs/cubestore:arm64-experimental-v2021-07-29
+    environment:
+      - CUBESTORE_REMOTE_DIR=/cube/data
+    volumes:
+      - .cubestore:/cube/data
+      
   cube:
     image: cubejs/cube:latest
     ports:
@@ -9,6 +16,10 @@ services:
     env_file: .env
     volumes:
       - .:/cube/conf
+    depends_on:
+      - cubestore
+    links:
+      - cubestore
 
   postgres:
     image: postgres
