--- a/examples/recipes/joining-multiple-datasources-data/.env
+++ b/examples/recipes/joining-multiple-datasources-data/.env
@@ -1,5 +1,6 @@
 CUBEJS_CUBESTORE_HOST=cubestore
-CUBEJS_DB_HOST=demo-db-recipes.cube.dev
+; ToDo change host name
+CUBEJS_DB_HOST=35.188.28.4 
 CUBEJS_DB_PORT=5432
 CUBEJS_DB_NAME=recipes
 CUBEJS_DB_USER=cube
