--- a/examples/recipes/joining-multiple-datasources-data/docker-compose.yml
+++ b/examples/recipes/joining-multiple-datasources-data/docker-compose.yml
@@ -2,8 +2,7 @@ version: '2.2'
 
 services:
   cubestore:
-  # ToDo change to the latest image
-    image: cubejs/cubestore:arm64-experimental-v2021-07-29
+    image: cubejs/cubestore:latest
     environment:
       - CUBESTORE_REMOTE_DIR=/cube/data
     volumes:
